MmshdMmnnmbth/Manifest_files/01_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod     # name is a string value
  namespace: dev
  labels:             # labels is a dictionery within the metadata dictionary
    app: myapp
    type: front-end
spec:             
  containers:              # containers is a list/array because we can have multiple containers in same pod   
    - name: nginx-container
      image: nginx
