MmshdMmnnmbth/Manifest_files/04_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp
    type: front-end
spec:
  replicas: 2
  selector:
    matchLabels:
      type: front-end
  template:
    metadata:
      name: myapp-pod
      namespace: dev   
      labels:             
        app: myapp
        type: front-end
    spec:             
      containers:                
        - name: nginx-container
          image: nginx
