MmshdMmnnmbth/Manifest_files/29_image_security.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-pod
spec:
  containers:
    - name: nginx
      image: private-registry.io/apps/internal-app
  imagePullSecrets:
    - name: regcred
