MmshdMmnnmbth/Manifest_files/19_service_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
    type: front-end
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30008
