MmshdMmnnmbth/Manifest_files/20_service_clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end
spec:
  selector:
    app: myapp
    type: back-end
  type: ClusterIP     #default is clusterIP
  ports:
    - targetPort: 80    # port where backend is exposed
      port: 80          # port where service is exposed
